almost done with wolves page

--- a/src/app/wolves/wolves.component.html
+++ b/src/app/wolves/wolves.component.html
@@ -1,1 +1,87 @@
-<p>wolves works!</p>
+<div class="wolves-container">
+  <div class="all-wolves">
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>Wolves</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+
+        <div class="loadingIndicator" *ngIf="wolvesLoading">
+          <mat-progress-spinner mode="indeterminate" color="primary"></mat-progress-spinner>
+        </div>
+
+        <table name="wolvesTable" ngDefaultControl mat-table *ngIf="this.wolves === null || this.wolves.length > 0"
+               [dataSource]="this.wolves">
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef>Name</th>
+            <td mat-cell *matCellDef="let wolf">{{wolf.name}}</td>
+          </ng-container>
+          <ng-container matColumnDef="gender">
+            <th mat-header-cell *matHeaderCellDef>Gender</th>
+            <td class="gender-cell" mat-cell *matCellDef="let wolf">{{wolf.gender}}</td>
+          </ng-container>
+          <ng-container matColumnDef="updatedAt">
+            <th mat-header-cell *matHeaderCellDef>Last Update</th>
+            <td mat-cell *matCellDef="let wolf">{{wolf.updatedAt}}</td>
+          </ng-container>
+          <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef>Action</th>
+            <td mat-cell *matCellDef="let wolf"><button (click)="selectWolf(wolf.id)" mat-raised-button color="primary">></button></td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="WolvesTableColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: WolvesTableColumns"></tr>
+        </table>
+      </mat-card-content>
+      <mat-card-actions align="end">
+        <button mat-fab color="accent" (click)="addWolf()">
+          <mat-icon class="mat-24">add</mat-icon></button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+  <div class="selected-wolf">
+    <mat-card *ngIf="selectedWolf !== null">
+      <mat-card-header>
+        <mat-card-title>Selected Wolf</mat-card-title>
+        <button (click)="closeSelectedWolf()" class="close-button" mat-raised-button color="warn">
+          <mat-icon class="mat-24">close</mat-icon></button>
+      </mat-card-header>
+      <mat-card-content>
+
+        <div class="wolf-selected" *ngIf="this.selectedWolf !== null">
+          <form [formGroup]="updateWolfForm">
+            <mat-form-field appearance="fill">
+              <mat-label>Name:</mat-label>
+              <input formControlName="name" matInput required="required">
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+              <mat-label>Gender:</mat-label>
+              <mat-select required="required" formControlName="gender" placeholder="Select">
+                <mat-option *ngFor="let g of genderValues" [value]="g">{{g}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+              <mat-label>Birthday:</mat-label>
+              <input required="required" formControlName="birthday" matInput [matDatepicker]="birthdayPicker">
+              <mat-datepicker-toggle matSuffix [for]="birthdayPicker"></mat-datepicker-toggle>
+              <mat-datepicker #birthdayPicker></mat-datepicker>
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+              <mat-label>Created At:</mat-label>
+              <input matInput disabled [value]="selectedWolf.createdAt">
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+              <mat-label>Updated At:</mat-label>
+              <input matInput disabled [value]="selectedWolf.updatedAt">
+            </mat-form-field>
+          </form>
+        </div>
+      </mat-card-content>
+      <mat-card-actions align="middle">
+        <div class="buttons">
+          <button (click)="updateWolf(this.selectedWolf.id)" class="button-save" mat-raised-button color="accent"><mat-icon class="mat-24">save</mat-icon> Save</button>
+          <button type="button" class="button-delete" mat-raised-button color="warn"><mat-icon class="mat-24">delete_forever</mat-icon> Delete</button>
+        </div>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+</div>
