--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,15 +10,15 @@
           <mat-progress-spinner mode="indeterminate" color="primary"></mat-progress-spinner>
         </div>
 
-        <table name="latestWolvesTable" [(ngModel)]="latestWolvesTable" ngDefaultControl mat-table *ngIf="this.wolves === null || this.wolves.length > 0"
+        <table name="latestWolvesTable" ngDefaultControl mat-table *ngIf="this.wolves === null || this.wolves.length > 0"
                [dataSource]="wolves">
           <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef>Name</th>
             <td mat-cell *matCellDef="let wolf">{{wolf.name}}</td>
           </ng-container>
-          <ng-container matColumnDef="updated_at">
+          <ng-container matColumnDef="updatedAt">
             <th mat-header-cell *matHeaderCellDef>Last Update</th>
-            <td mat-cell *matCellDef="let wolf">{{wolf.updated_at}}</td>
+            <td mat-cell *matCellDef="let wolf">{{wolf.updatedAt}}</td>
           </ng-container>
           <tr mat-header-row *matHeaderRowDef="WolvesTableColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: WolvesTableColumns"></tr>
@@ -45,15 +45,15 @@
           <mat-progress-spinner mode="indeterminate" color="primary"></mat-progress-spinner>
         </div>
 
-        <table name="latestPacksTable" [(ngModel)]="latestPacksTable" ngDefaultControl mat-table *ngIf="this.packs === null || this.packs.length > 0"
+        <table name="latestPacksTable" ngDefaultControl mat-table *ngIf="this.packs === null || this.packs.length > 0"
                [dataSource]="packs">
           <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef>Name</th>
             <td mat-cell *matCellDef="let pack">{{pack.name}}</td>
           </ng-container>
-          <ng-container matColumnDef="updated_at">
+          <ng-container matColumnDef="updatedAt">
             <th mat-header-cell *matHeaderCellDef>Last Update</th>
-            <td mat-cell *matCellDef="let pack">{{pack.updated_at}}</td>
+            <td mat-cell *matCellDef="let pack">{{pack.updatedAt}}</td>
           </ng-container>
           <tr mat-header-row *matHeaderRowDef="PacksTableColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: PacksTableColumns"></tr>
