--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,7 +10,8 @@
           <mat-progress-spinner mode="indeterminate" color="primary"></mat-progress-spinner>
         </div>
 
-        <table name="latestWolvesTable" ngDefaultControl mat-table *ngIf="this.wolves === null || this.wolves.length > 0"
+        <table name="latestWolvesTable" ngDefaultControl mat-table
+               *ngIf="this.wolves === null || this.wolves.length > 0"
                [dataSource]="wolves">
           <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef>Name</th>
@@ -20,6 +21,12 @@
             <th mat-header-cell *matHeaderCellDef>Last Update</th>
             <td mat-cell *matCellDef="let wolf">{{wolf.updatedAt}}</td>
           </ng-container>
+          <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef>Actions</th>
+            <td mat-cell *matCellDef="let wolf">
+              <button [routerLink]="'/wolves/' + wolf.id" class="open-btn" mat-raised-button color="primary">></button>
+            </td>
+          </ng-container>
           <tr mat-header-row *matHeaderRowDef="WolvesTableColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: WolvesTableColumns"></tr>
         </table>
@@ -27,10 +34,11 @@
         <div class="no-wolves" *ngIf="!wolvesLoading &&( wolves === null || wolves.length === 0)">
           <h3>No wolves registered yet, please add some more.</h3>
         </div>
-        <mat-card-actions align="end">
-          <a class="btn show-all" mat-raised-button color="primary" routerLink="/wolves" routerLinkActive="active">Show All</a>
-        </mat-card-actions>
       </mat-card-content>
+      <mat-card-actions align="end">
+        <a class="btn show-all" mat-raised-button color="primary" routerLink="/wolves" routerLinkActive="active">Show
+          All</a>
+      </mat-card-actions>
     </mat-card>
   </div>
 
@@ -55,6 +63,12 @@
             <th mat-header-cell *matHeaderCellDef>Last Update</th>
             <td mat-cell *matCellDef="let pack">{{pack.updatedAt}}</td>
           </ng-container>
+          <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef>Actions</th>
+            <td mat-cell *matCellDef="let pack">
+              <button [routerLink]="'/packs/' + pack.id" class="open-btn" mat-raised-button color="primary">></button>
+            </td>
+          </ng-container>
           <tr mat-header-row *matHeaderRowDef="PacksTableColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: PacksTableColumns"></tr>
         </table>
@@ -64,8 +78,8 @@
         </div>
       </mat-card-content>
       <mat-card-actions align="end">
-        <a mat-raised-button color="primary" routerLink="packs">Show All</a>
-
+        <a class="btn show-all" mat-raised-button color="primary" routerLink="/packs" routerLinkActive="active">Show
+          All</a>
       </mat-card-actions>
     </mat-card>
   </div>
