--- a/src/app/wolves/wolves.component.html
+++ b/src/app/wolves/wolves.component.html
@@ -14,32 +14,32 @@
                [dataSource]="this.wolves">
           <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef>Name</th>
-            <td mat-cell *matCellDef="let wolf">{{wolf.name}}</td>
+            <td class="{{(this.selectedWolf !== null && this.selectedWolf.id === wolf.id ? 'active' : '')}}" mat-cell *matCellDef="let wolf">{{wolf.name}}</td>
           </ng-container>
           <ng-container matColumnDef="gender">
             <th mat-header-cell *matHeaderCellDef>Gender</th>
-            <td class="gender-cell" mat-cell *matCellDef="let wolf">{{wolf.gender}}</td>
+            <td class="gender-cell {{(this.selectedWolf !== null && this.selectedWolf.id === wolf.id ? 'active' : '')}}" mat-cell *matCellDef="let wolf">{{wolf.gender}}</td>
           </ng-container>
           <ng-container matColumnDef="updatedAt">
             <th mat-header-cell *matHeaderCellDef>Last Update</th>
-            <td mat-cell *matCellDef="let wolf">{{wolf.updatedAt}}</td>
+            <td class="{{(this.selectedWolf !== null && this.selectedWolf.id === wolf.id ? 'active' : '')}}" mat-cell *matCellDef="let wolf">{{wolf.updatedAt}}</td>
           </ng-container>
           <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef>Action</th>
-            <td mat-cell *matCellDef="let wolf"><button (click)="selectWolf(wolf.id)" mat-raised-button color="primary">></button></td>
+            <td class="{{(this.selectedWolf !== null && this.selectedWolf.id === wolf.id ? 'active' : '')}}" mat-cell *matCellDef="let wolf"><button (click)="selectWolf(wolf.id)" mat-raised-button color="primary">></button></td>
           </ng-container>
           <tr mat-header-row *matHeaderRowDef="WolvesTableColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: WolvesTableColumns"></tr>
         </table>
       </mat-card-content>
       <mat-card-actions align="end">
-        <button mat-fab color="accent" (click)="addWolf()">
+        <button mat-fab color="accent" (click)="this.openCreateWolfForm()">
           <mat-icon class="mat-24">add</mat-icon></button>
       </mat-card-actions>
     </mat-card>
   </div>
   <div class="selected-wolf">
-    <mat-card *ngIf="selectedWolf !== null">
+    <mat-card class="update-wolf" *ngIf="selectedWolf !== null">
       <mat-card-header>
         <mat-card-title>Selected Wolf</mat-card-title>
         <button (click)="closeSelectedWolf()" class="close-button" mat-raised-button color="warn">
@@ -52,26 +52,35 @@
             <mat-form-field appearance="fill">
               <mat-label>Name:</mat-label>
               <input formControlName="name" matInput required="required">
+              <mat-error *ngIf="updateWolfForm.controls.name.hasError('required') || updateWolfForm.controls.name.hasError('whitespace')">
+                Name is <strong>Required</strong>
+              </mat-error>
             </mat-form-field>
             <mat-form-field appearance="fill">
               <mat-label>Gender:</mat-label>
               <mat-select required="required" formControlName="gender" placeholder="Select">
                 <mat-option *ngFor="let g of genderValues" [value]="g">{{g}}</mat-option>
               </mat-select>
+              <mat-error *ngIf="updateWolfForm.controls.gender.hasError('required')">
+                Gender is <strong>Required</strong>
+              </mat-error>
             </mat-form-field>
             <mat-form-field appearance="fill">
               <mat-label>Birthday:</mat-label>
               <input required="required" formControlName="birthday" matInput [matDatepicker]="birthdayPicker">
+              <mat-error *ngIf="updateWolfForm.controls.birthday.hasError('required') || updateWolfForm.controls.birthday.hasError('whitespace')">
+                Birthday is <strong>Required</strong>
+              </mat-error>
               <mat-datepicker-toggle matSuffix [for]="birthdayPicker"></mat-datepicker-toggle>
               <mat-datepicker #birthdayPicker></mat-datepicker>
             </mat-form-field>
             <mat-form-field appearance="fill">
               <mat-label>Created At:</mat-label>
-              <input matInput disabled [value]="selectedWolf.createdAt">
+              <input matInput disabled [value]="selectedWolf.createdAt.toString()">
             </mat-form-field>
             <mat-form-field appearance="fill">
               <mat-label>Updated At:</mat-label>
-              <input matInput disabled [value]="selectedWolf.updatedAt">
+              <input matInput disabled [value]="selectedWolf.updatedAt.toString()">
             </mat-form-field>
           </form>
         </div>
@@ -79,7 +88,52 @@
       <mat-card-actions align="middle">
         <div class="buttons">
           <button (click)="updateWolf(this.selectedWolf.id)" class="button-save" mat-raised-button color="accent"><mat-icon class="mat-24">save</mat-icon> Save</button>
-          <button type="button" class="button-delete" mat-raised-button color="warn"><mat-icon class="mat-24">delete_forever</mat-icon> Delete</button>
+          <button (click)="deleteWolf(this.selectedWolf.id)" type="button" class="button-delete" mat-raised-button color="warn"><mat-icon class="mat-24">delete_forever</mat-icon> Delete</button>
+        </div>
+      </mat-card-actions>
+    </mat-card>
+
+    <mat-card class="add-wolf" *ngIf="this.createWolfFlag">
+      <mat-card-header>
+        <mat-card-title>Add Wolf</mat-card-title>
+        <button (click)="this.createWolfFlag = false" class="close-button" mat-raised-button color="warn">
+          <mat-icon class="mat-24">close</mat-icon></button>
+      </mat-card-header>
+      <mat-card-content>
+
+        <div class="create-wolf">
+          <form [formGroup]="createWolfForm">
+            <mat-form-field appearance="fill">
+              <mat-label>Name:</mat-label>
+              <input formControlName="name" matInput required="required">
+              <mat-error *ngIf="createWolfForm.controls.name.hasError('required') || updateWolfForm.controls.name.hasError('whitespace')">
+                Name is <strong>Required</strong>
+              </mat-error>
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+              <mat-label>Gender:</mat-label>
+              <mat-select required="required" formControlName="gender" placeholder="Select">
+                <mat-option *ngFor="let g of genderValues" [value]="g">{{g}}</mat-option>
+              </mat-select>
+              <mat-error *ngIf="createWolfForm.controls.gender.hasError('required')">
+                Gender is <strong>Required</strong>
+              </mat-error>
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+              <mat-label>Birthday:</mat-label>
+              <input required="required" formControlName="birthday" matInput [matDatepicker]="birthdayPicker">
+              <mat-error *ngIf="createWolfForm.controls.birthday.hasError('required') || updateWolfForm.controls.birthday.hasError('whitespace')">
+                Name is <strong>Required</strong>
+              </mat-error>
+              <mat-datepicker-toggle matSuffix [for]="birthdayPicker"></mat-datepicker-toggle>
+              <mat-datepicker #birthdayPicker></mat-datepicker>
+            </mat-form-field>
+          </form>
+        </div>
+      </mat-card-content>
+      <mat-card-actions align="middle">
+        <div class="buttons">
+          <button (click)="createWolf()" class="button-save" mat-raised-button color="accent"><mat-icon class="mat-24">save</mat-icon> Save</button>
         </div>
       </mat-card-actions>
     </mat-card>
