added comments and some cleanup work

--- a/src/app/packs/packs.component.html
+++ b/src/app/packs/packs.component.html
@@ -87,7 +87,7 @@
                 <tr mat-row *matRowDef="let row; columns: selectedPackWolvesTableColumns"></tr>
               </table>
               <div class="actions" align="end">
-                <button (click)="openAddWolfToPack()" class="add-wolves-to-pack-btn" mat-fab color="accent"><mat-icon class="mat-24">add</mat-icon></button>
+                <button (click)="addWolfToPack()" class="add-wolves-to-pack-btn" mat-fab color="accent"><mat-icon class="mat-24">add</mat-icon></button>
               </div>
             </div>
             <div class="google-maps">
