--- a/src/app/dialog/select-wolf/select-wolf-dialog.component.html
+++ b/src/app/dialog/select-wolf/select-wolf-dialog.component.html
@@ -1,11 +1,12 @@
 <div class="select-wolves-container">
   <h1>Select one or multiple wolves</h1>
-  <div class="no-wolves-to-add" align="middle" *ngIf="this.wolves === null || this.wolves === undefined || this.wolves.length === 0">
-    <h3><i>All wolves are already in this pack.</i></h3>
-  </div>
   <div class="dialog-actions" align="end">
     <button (click)="closeDialog()" class="cancel-btn" mat-raised-button color="primary"><mat-icon class="mat-24">cancel</mat-icon> Cancel</button>
     <button *ngIf="this.wolves === null || this.wolves === undefined || this.wolves.length > 0" (click)="saveDialog()" class="save-btn" mat-raised-button color="accent"><mat-icon class="mat-24">save</mat-icon> Save</button>
+  </div>
+
+  <div class="no-wolves-to-add" align="middle" *ngIf="this.wolves === null || this.wolves === undefined || this.wolves.length === 0">
+    <h3><i>All wolves are already in this pack.</i></h3>
   </div>
   <table name="wolvesTable" ngDefaultControl mat-table *ngIf="this.wolves === null || this.wolves.length > 0"
          [dataSource]="this.wolves">
@@ -24,7 +25,7 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Action</th>
       <td mat-cell *matCellDef="let wolf">
-        <button (click)="addWolf(wolf.id)" mat-raised-button color="primary">
+        <button (click)="addWolfBtnClicked(wolf.id)" mat-raised-button color="primary">
           <mat-icon id="icon-wolf-{{wolf.id}}" class="mat-24">add</mat-icon>
         </button>
       </td>
